<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">RickAndMorty</string>


    <!--  Navigation Data  -->
    <string name="air_date">Air Date</string>
    <string name="alive">Alive</string>
    <string name="alive_leading_caps">Alive</string>
    <string name="all">All</string>
    <string name="anatomy_park_b">Anatomy Park With B</string>
    <string name="appearance">APPEARANCE</string>
    <string name="back">Back</string>
    <string name="back_button">Back Button</string>
    <string name="bottom_bar">bottom-bar</string>
    <string name="broken">Broken</string>
    <string name="character">character</string>
    <string name="character_detail_screen_title">Character Details</string>
    <string name="character_detail_small_case">character_detail</string>
    <string name="characters">CHARACTERS</string>
    <string name="characters_screen_title">Characters</string>
    <string name="characters_small_case">characters</string>
    <string name="click_to_apply">Click to Apply</string>
    <string name="dead">dead</string>
    <string name="dead_leading_caps">Dead</string>
    <string name="dimension">Dimension</string>
    <string name="ep_detail">EP Detail</string>
    <string name="episode">Episode</string>
    <string name="episode_detail">episode_detail</string>
    <string name="episode_detail_load">Episode Detail Load</string>
    <string name="episode_detail_screen_title">Episode Details</string>
    <string name="episodes_all_caps">EPISODES</string>
    <string name="episodes_screen_title">Episodes</string>
    <string name="episodes_small_case">episodes</string>
    <string name="evil_dimention">Evil Dimention</string>
    <string name="female">Female</string>
    <string name="fetching_characters">Fetching Characters</string>
    <string name="fetching_episodes">Fetching Episodes</string>
    <string name="fetching_records">Fetching Records</string>
    <string name="filter">Filter</string>
    <string name="filter_for_characters">Filter for Characters</string>
    <string name="filter_small_case">filter</string>
    <string name="four_image_row">Four Image Row</string>
    <string name="gender">Gender</string>
    <string name="genderless">Genderless</string>
    <string name="go_to_detail_screen">Click to go to Detail Screen</string>
    <string name="go_to_next_screen">Go to next screen</string>
    <string name="icon">Icon</string>
    <string name="info">INFO</string>
    <string name="item_name">Item Name</string>
    <string name="last_seen">Last Seen</string>
    <string name="load_more">Load More</string>
    <string name="load_more_characters">Load More Characters</string>
    <string name="load_more_locations">Load More Locations</string>
    <string name="loading">Loading...</string>
    <string name="loading_small_case">loading</string>
    <string name="location">Locations</string>
    <string name="location_all_caps">LOCATION</string>
    <string name="location_characters">Icon of Location Characters</string>
    <string name="location_detail_screen_title">Location Details</string>
    <string name="location_details">location_details</string>
    <string name="locations_screen_title">Locations</string>
    <string name="locations_small_case">locations</string>
    <string name="male">Male</string>
    <string name="mount">Mount</string>
    <string name="next_location_screen">to go on next location screen</string>
    <string name="no_characters_found">No characters found matching the input:</string>
    <string name="no_location_found">No locations found matching the input:</string>
    <string name="one">1</string>
    <string name="origin">Origin</string>
    <string name="residents_all_caps">RESIDENTS</string>
    <string name="rick_and_morty">Rick And Morty</string>
    <string name="rick_morty_image">rick and morty image</string>
    <string name="row">Row</string>
    <string name="search_bar">Search Bar</string>
    <string name="search_lazy_column">search_lazy_column</string>
    <string name="search_screen_title">Search</string>
    <string name="search_small_case">search</string>
    <string name="search_test_screen">Search test: Screen:</string>
    <string name="selected">Selected</string>
    <string name="single_image_row">Single Image Row</string>
    <string name="species">Species</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="type_search_loc_by_name_type">Type to search location by name or type</string>
    <string name="type_to_search_char">Type to search character by name</string>
    <string name="unknown">unknown</string>
    <string name="values">values</string>
    <string name="x">Characters</string>
    <string name="detail_ep">detail ep</string>
    <string name="apply_filter">applyFilter</string>
    <string name="rating">Rating</string>
    <string name="description_caps">DESCRIPTION</string>
    <string name="full_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="crew">CREW</string>
    <string name="play_video">Play Video</string>
    <string name="All_leading_caps">All</string>
    <string name="season_all_small_case">season</string>
    <string name="episode_all_small_case">episode</string>
    <string name="room_error">Room Error</string>
    <string name="Completed_leading_case">Completed</string>
    <string name="true_leading_caps">True</string>
    <string name="datastate_all_small_case">dataState</string>
    <string name="is_local">is_local</string>
    <string name="w500">w500</string>
    <string name="crew_members_leading_caps">Crew Members</string>
    <string name="exit_leading_caps">Exit</string>
    <string name="search_test_iamrunning">Search test: I am Rumning</string>
    <string name="search_test_bypagenum">Search test: by pageNum</string>
    <string name="search_test_character">Search test:Character</string>
    <string name="search_test_byname">Search test: by name</string>
    <string name="search_test_bytype">Search test: by type</string>
    <string name="internet_on">Internet On</string>
    <string name="episode_realm_leading_caps">Episode Realm</string>
    <string name="cc_status">CC Status</string>
    <string name="location_realm_leading_caps">Location Realm</string>
    <string name="file_path">file_path</string>
    <string name="aspect_ratio">aspect_ratio</string>
    <string name="height">height</string>
    <string name="iso_639_1">iso_639_1</string>
    <string name="iso_3166_1">iso_3166_1</string>
    <string name="key">key</string>
    <string name="site">site</string>
    <string name="name">name</string>
    <string name="size">size</string>
    <string name="type_all_small_case">type</string>
    <string name="vote_average">vote_average</string>
    <string name="width">width</string>
    <string name="vote_count">vote_count</string>
    <string name="id">id</string>
    <string name="more">More</string>
    <string name="amazon">Amazon</string>
    <string name="hulu">Hulu</string>
    <string name="adult_swin">Adult Swin</string>
    <string name="apple">Apple</string>
    <string name="type_to_search_episode_by_overview">Type to search episode by overview</string>
    <string name="rickmorty_navhost">Rick And Morty NavHost</string>
    <string name="rickmorty_main">Rick And Morty Main</string>
    <string name="online_leading_caps">Online</string>
    <string name="sync_in_progress">Sync in Progress</string>
    <string name="offline">Offline</string>

</resources>
